--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.2",
     "file-saver": "^2.0.5",
-    "html2canvas": "^1.4.1",
-    "html2canvas-pro": "^1.6.6",
-    "jspdf": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
